--- a/themes/socialasset/assets/css/_about-us.css
+++ b/themes/socialasset/assets/css/_about-us.css
@@ -3,7 +3,7 @@
   min-height: 495px;
   padding-top: 88px;
   padding-bottom: 220px;
-} 
+}  
 .about-story-des-main{
   max-width: 800px;
   margin: 0 auto;
@@ -91,7 +91,7 @@
 .core-value-col-innr{
   max-width: 265px;
   margin: auto;
-  margin-bottom: 30px;
+  margin-bottom: 35px;
 }
 .core-value-col-innr i{
   display: inline-block;
@@ -145,11 +145,13 @@
 }
 .abt-social-asset-lft p{
   color: #000;
+  font-size: 18px;
   margin-bottom: 28px;
   line-height: 29px;
 }
 .abt-social-asset-lft p:nth-child(2){
   line-height: 26px;
+  font-size: 20px;
 }
 .abt-social-asset-rgt{
   width: 58.4%;
@@ -333,6 +335,15 @@
   }
   .core-value-head h2 {
     font-size: 36px;
+  }
+  .core-value-col-innr h6 {
+    margin-bottom: 15px;
+  }
+  .core-value-sec {
+    padding: 50px 0 40px;
+  }
+  .core-value-head {
+    padding-bottom: 35px;
   }
 }
 
