--- a/themes/socialasset/assets/css/_user-campaign-page.css
+++ b/themes/socialasset/assets/css/_user-campaign-page.css
@@ -1,7 +1,7 @@
 .miracle-plan-sec{
   background: #F4F5F9;
   padding: 135px 0 90px;
-}
+} 
 .miracle-plan-slider-wrp{
   width: 60.5%;
   float: left;
@@ -214,9 +214,14 @@ span.miraclePlanthumbSlider-item img{
   font-weight: 900;
   text-transform: uppercase;
   background: #0055FF;
-  padding: 17px 20px 17px 60px;
+  padding: 17px 10px 17px 60px;
+  max-width: 270px;
+  width: 100%;
+  min-height: 55px;
+  letter-spacing: 1.3px;
   border: 2px solid #0055ff;
   border-radius: 30px;
+  text-align: left;
 }
 .miracle-plan-progress-link-wrp .support-btn:hover{
   color: #0055FF;
@@ -318,7 +323,11 @@ span.miraclePlanthumbSlider-item img{
     padding: 90px 0;
   }
   .miraclePlanBigSlider-item {
-      min-height: 430px;
+    min-height: 430px;
+  }
+  .miracle-plan-progress-link-wrp .support-btn {
+    padding: 17px 10px 17px 48px;
+    letter-spacing: 1px;
   }
 }
 
@@ -368,6 +377,9 @@ span.miraclePlanthumbSlider-item img{
   .user-story-gallery {
     padding: 25px 0;
   }
+  .miracle-plan-progress-camp {
+    padding-right: 0;
+  }
 }
 
 @media(max-width: 575px){
@@ -388,27 +400,45 @@ span.miraclePlanthumbSlider-item img{
   .user-story-cmpaign-con h3 {
     font-size: 27px;
   }
+  .user-story-gallery-item-bg {
+    min-height: 300px;
+  }
+  .user-story-cmpaign-sec {
+    padding-bottom: 100px;
+  }
 }
 
 @media(max-width: 479px){
   .miracle-plan-des-wrp {
     padding-top: 15px;
   }
-  .miracle-plan-progress-link-wrp .share-btn {
-    position: static;
-    margin-top: 25px;
-  }
+
   .miracle-plan-progress-link-wrp {
-    padding-right: 70px;
+    padding-right: 90px;
   }
   .user-story-cmpaign-con h3 {
     margin-bottom: 20px;
   }
+
+  .miracle-plan-progress-link-wrp .support-btn {
+    font-size: 11px;
+    padding: 17px 10px 17px 48px;
+    letter-spacing: 1px;
+    max-width: 230px;
+    width: 100%;
+    min-height: initial;
+    letter-spacing: 1px;
+    text-align: left;
+  }
 }
 
 @media(max-width: 359px){
+  .miracle-plan-progress-link-wrp .share-btn {
+    position: static;
+    margin-top: 25px;
+  } 
   .miracle-plan-progress-link-wrp {
-    padding-right: 28px;
+    padding-right: 50px;
   }
 }
 
