ui datepicker add

--- a/themes/socialasset/assets/css/_commons.css
+++ b/themes/socialasset/assets/css/_commons.css
@@ -244,5 +244,9 @@ form .dropdown-menu li a{
 	background-color: #0054FD;
 }
 
+.bootstrap-select .dropdown-toggle:focus{
+	outline: none!important;
+}
+
 
 
