--- a/themes/socialasset/assets/css/_header.css
+++ b/themes/socialasset/assets/css/_header.css
@@ -203,9 +203,13 @@ header.header{
 	position: absolute;
 	left: 0;
 	right: 0;
-	top: 100%;
-	padding: 25px 10px 0;
+	top: 0;
+	padding: 85px 10px 0;
+    -webkit-box-shadow: 0px 3px 15px 0px rgba(212,220,227,1);
+    -moz-box-shadow: 0px 3px 15px 0px rgba(212,220,227,1);
+    box-shadow: 0px 3px 15px 0px rgba(212,220,227,1);
 }
+
 .login-btn.login-btn-expend{
 	border-radius: 1px 1px 0 0;
 }
@@ -242,6 +246,8 @@ header.header{
 	cursor: pointer;
 	display: inline-block;
 	vertical-align: baseline;
+	position: relative;
+	z-index: 11;
 }
 .campaign-btn{
 	background: #0055FF;
