--- a/themes/socialasset/assets/css/_login-register.css
+++ b/themes/socialasset/assets/css/_login-register.css
@@ -239,7 +239,7 @@ button.tab-link.current:after{
 .fl-sign-in-another a{
 	display: block;
 	border: 1px solid #d8dcdf;
-	padding: 18px 20px 12px;
+	padding: 16px 20px 14px;
 	text-align: center;
 	color: #46505C;
 	margin-bottom: 15px;
@@ -257,8 +257,17 @@ button.tab-link.current:after{
 	transform: translateY(-50%);
 	-ms-transform: translateY(-50%);
 	-webkit-transform: translateY(-50%);
+	color: #2376FA;
+	font-size: 20px;
+}
+.fl-sign-in-another a:hover i{
+	color: #fff;
 }
 
+a.facebook-login-btn:hover{
+	background: #365699;
+	color: #fff;
+}
 .login-form-clip{
 	position: absolute;
 	z-index: 1;
@@ -371,6 +380,23 @@ a.linkedin-login-btn:hover{
 	position: relative;
 	height: 50px;
 	cursor: pointer;
+}
+.register-type-btn button:after,
+.register-type-btn a:after{
+	content: "\f105";
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 600;
+    text-decoration: inherit;
+    color: #0055FF;
+    font-size: 22px;
+    padding-right: 0;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    right: 10px;
+    line-height: 15px;
 }
 
 .register-type-btn a:last-child{
@@ -805,6 +831,32 @@ span.file-up-instruction-txt {
 	left: auto;
 	background: #0055FF;
 }
+.checkbox-slider:after{
+	content: "\f00d";
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 600;
+    text-decoration: inherit;
+    color: #A1ABBC;
+    font-size: 12px;
+    padding-right: 0;
+    position: absolute;
+    top: 3px;
+    right: 7px;
+    line-height: 15px;
+}
+.switch-checkbox input:checked ~ .checkbox-slider:after {
+    content: "\f00c";
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 600;
+    text-decoration: inherit;
+    color: #fff;
+    font-size: 12px;
+    padding-right: 0;
+    position: absolute;
+    top: 3px;
+    right: 4px;
+    line-height: 15px;
+}
 
 .switch-item label{
 	padding-left: 60px;
@@ -879,6 +931,26 @@ span.file-up-instruction-txt {
 	font-size: 16px;
 	font-weight: 400;
 }
+.table-dsc table thead tr th span{
+	position: relative;
+	padding-right: 30px;
+}
+.table-dsc table thead tr th span:after{
+	content: "\f0dc";
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 600;
+    text-decoration: inherit;
+    color: #555758;
+    font-size: 18px;
+    padding-right: 0;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    right: 0;
+    line-height: 15px;
+}
 .table-dsc table thead tr th:first-child,
 .table-dsc table tbody tr td:first-child{
 	padding-left: 30px;
@@ -910,11 +982,11 @@ span.file-up-instruction-txt {
 }
 .table-dsc table thead tr th:nth-child(2),
 .table-dsc table tbody tr td:nth-child(2){
-	width: 12%;
+	width: 13%;
 }
 .table-dsc table thead tr th:nth-child(3),
 .table-dsc table tbody tr td:nth-child(3){
-	width: 45%;
+	width: 44%;
 }
 .table-dsc table thead tr th:nth-child(4),
 .table-dsc table tbody tr td:nth-child(4){
@@ -1077,6 +1149,16 @@ span.status-published-title.color-red{
 	line-height: 16px;
 	padding: 19px 25px;
 	margin-bottom: 15px;
+	position: relative;
+}
+.profile-is-draft i{
+	position: absolute;
+	top: 50%;
+	right: 20px;
+	transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
+	cursor: pointer;
 }
 .profile-is-draft p{
 	margin-bottom: 0;
@@ -1591,4 +1673,65 @@ span.status-published-title.color-red{
 
 #ui-datepicker-div{
 	z-index: 50!important;
+}
+
+.ui-icon, 
+.ui-widget-content.ui-icon{
+	background: transparent!important;
+}
+
+.ui-datepicker-header.ui-widget-header{
+	position: relative;
+}
+a.ui-datepicker-prev {
+    position: absolute;
+    right: 36px;
+    width: 20px;
+    height: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    background: #0055FF;
+}
+a.ui-datepicker-next {
+    position: absolute;
+    right: 5px;
+    width: 20px;
+    height: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    background: #0055FF;
+}
+
+a.ui-datepicker-prev:after {
+    content: "\f104";
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 600;
+    text-decoration: inherit;
+    color: #fff;
+    font-size: 18px;
+    padding-right: 0;
+    position: absolute;
+    top: 2px;
+    right: 5px;
+    line-height: 15px;
+}
+a.ui-datepicker-next:after {
+    content: "\f105";
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 600;
+    text-decoration: inherit;
+    color: #fff;
+    font-size: 18px;
+    padding-right: 0;
+    position: absolute;
+    top: 2px;
+    right: 5px;
+    line-height: 15px;
+}
+.ui-datepicker-title{
+	padding: 10px!important;
 }
