--- a/themes/socialasset/assets/css/_login-register.css
+++ b/themes/socialasset/assets/css/_login-register.css
@@ -130,6 +130,9 @@ button.tab-link.current:after{
 .sa-input input[type="password"]:focus{
 	background: #e5e2e2;
 }
+.search-by-name input:focus{
+	background: #f4f7f9;
+}
 
 
 .sa-input textarea{
@@ -1229,14 +1232,15 @@ span.status-published-title.color-red{
 	padding-top: 11px;
 	position: relative;
 }
-.ngo-archive-date input{
-	position: absolute;
-	left: 0;
-	top: 0;
-	right: 0;
-	opacity: 0;
+.ngo-archive-date input {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
 }
-
 .search-by-name{
 	width: 280px;
 	position: relative;
@@ -1263,6 +1267,9 @@ span.status-published-title.color-red{
 	z-index: 2;
 	background: transparent;
 	cursor: pointer;
+}
+.search-by-name button:hover{
+	color: #0055FF;
 }
 .pagi-select-area{
 	padding: 55px 0 0;
@@ -1693,6 +1700,7 @@ a.ui-datepicker-prev {
     -ms-transform: translateY(-50%);
     -webkit-transform: translateY(-50%);
     background: #0055FF;
+    border: none!important;
 }
 a.ui-datepicker-next {
     position: absolute;
@@ -1704,6 +1712,7 @@ a.ui-datepicker-next {
     -ms-transform: translateY(-50%);
     -webkit-transform: translateY(-50%);
     background: #0055FF;
+    border: none!important;
 }
 
 a.ui-datepicker-prev:after {
