--- a/themes/socialasset/assets/css/_login-register.css
+++ b/themes/socialasset/assets/css/_login-register.css
@@ -1,3 +1,18 @@
+.success-signup {
+    color: green;
+    font-size: 18px;
+}
+.login-error {
+    color: red;
+    margin-bottom: 10px;
+    display: block;
+}
+.success-login {
+    color: green;
+    margin-bottom: 23px;
+    display: block;
+    font-size: 18px;
+}
 .content-center-cntlr{
 	position: relative;
 }
