--- a/themes/socialasset/assets/css/_login-register.css
+++ b/themes/socialasset/assets/css/_login-register.css
@@ -361,7 +361,7 @@ a.linkedin-login-btn:hover{
     float: right;
 }
 .login-form-lft-col{
-	padding: 165px 200px 190px 0;
+	padding: 165px 200px 190px 15px;
 }
 
 .register-hdr-con{
@@ -1784,11 +1784,15 @@ a.ui-datepicker-next:after {
 }
 
 @media(max-width: 1399px){
-
+	.fl-login .fl-input-field-row-grd .fl-input-field-row{
+		width: 100%;
+	}
 }
 
 @media(max-width: 1299px){
-
+	.login-form-lft-col{
+		padding-right: 100px;
+	}
 }
 
 @media(max-width: 1199px){
@@ -1830,6 +1834,9 @@ a.ui-datepicker-next:after {
 		width: 100%;
 		margin-left: auto;
 		margin-right: auto;
+	}
+	.login-form-lft-col{
+		padding-right: 50px;
 	}
 }
 
@@ -1947,6 +1954,13 @@ a.ui-datepicker-next:after {
 	.supported-campaigns-tab-items .campaigns-item-img{
 		height: 200px;
 	}
+	.login-form-lft-col{
+		padding-right: 35px;
+	}
+	.fl-login .fl-login-form{
+		padding-left: 20px;
+		padding-right: 20px;
+	}
 }
 
 @media(max-width: 767px){
@@ -1968,7 +1982,20 @@ a.ui-datepicker-next:after {
 		width: 50%;
 		padding-bottom: 20px;
 	}
-
+	.login-form-lft-col{
+		width: 100%;
+		padding-left: 15px;
+		padding-right: 15px;
+		padding-top: 70px;
+	}
+	.login-page-rgt-fea-img{
+		display: none;
+	}
+	.fl-login .fl-login-form{
+		float: none;
+		margin-left: auto;
+		margin-right: auto;
+	}
 }
 
 @media(max-width: 639px){
