--- a/themes/socialasset/assets/css/_page.css
+++ b/themes/socialasset/assets/css/_page.css
@@ -8,13 +8,25 @@ box-shadow: 0px 14px 23px 0px rgba(227,228,232,1);
 .gray-bg{
 	background-color: #f4f5f9;
 }
-
-.modal-page{
-	padding: 150px  100px 150px;
+.modal-open .modal{
+	padding-left: 5px!important;
+	padding-right: 5px!important;
 }
+.modal-page{
+	padding: 150px  15px 150px;
+}
+.modal-page .btn{
+	max-width: 370px;
+	width: 100%;
+	word-wrap: break-word;
+	height: auto;
+}
+
 .modal-content{
 	border-radius: 10px;
 	border: none;
+	margin-top: 40px;
+	margin-bottom: 40px;
 }
 .modal-login-form{
 	padding: 65px 60px 45px;
@@ -187,11 +199,18 @@ Start sitemap
 	    width: 130px;
 	    height: 45px;
 	}
+	.modal-login-form{
+		padding-left: 40px;
+		padding-right: 40px;
+	}
 
 }
 
 @media(max-width: 479px){
-
+	.modal-login-form {
+	    padding-left: 25px;
+	    padding-right: 25px;
+	}
 
 }
 
